# watsonx-financial-fraud-governance

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.yaml
docs/: architecture.md
notebooks/: 01_fraud_detection_demo.ipynb
src/: __init__.py  config.py
src/api/: routes.py  schemas.py
src/data/: __init__.py  feature_engineering.py  ingestion.py  synthetic_generator.py
src/explainability/: __init__.py  narrative_generator.py  shap_explainer.py
src/governance/: __init__.py  bias_detector.py  drift_monitor.py  factsheet.py
src/models/: __init__.py  anomaly.py  ensemble.py  trainer.py
src/ui/: app.py
tests/: __init__.py  conftest.py  test_api.py  test_ensemble.py  test_explainability.py  test_feature_engineering.py  test_governance.py
